# agents

./: AGENTS.md  CLAUDE.md  Design-doc.md  Documentation_Index.md  LiveKit_Agents_Deep_Dive.md  Pipecat_Comprehensive_Guide.md  Pipecat_Guide.md  README.md  platforms_guide.md  pyproject.toml  retell.md
.github/: pr-mirror-state.json
.github/workflows/: pr-mirror.yml
examples/flows/: advanced_test_flow.json  minimal_test_flow.json  tech_support_example.json
examples/voice_agents/: basic_agent.py  filler.py  filler_stt_interim.py  flow_console.py  test.py  test_v2.py  tool_checker_direct_call.py
livekit-agents/: pyproject.toml
livekit-agents/livekit/agents/cli/: log.py
livekit-agents/livekit/agents/flow/: README.md  __init__.py  base.py  builder.py  dental.json  enums.py  fields.py  flow_runner_2.py  flow_spec.py  hybrid_flow.py  io.py  retell.json  retell_1.json  runner.py  schema.py  transition_evaluator.py  validators.py
livekit-agents/livekit/agents/stt/: openai.py
livekit-agents/livekit/agents/voice/: agent.py  agent_activity.py  agent_session.py  io.py  speech_handle.py
livekit-plugins/livekit-plugins-kittentts/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-kittentts/livekit/plugins/kittentts/: __init__.py  model.py  runner.py  tts.py
livekit/agents/flow/core/: __init__.py
tests/: conftest.py  test_advanced_flow.py  test_agent_session.py  test_flow.py  test_flow_extra.py  test_flow_more.py  test_retell_flow.py  test_tool_http_utils.py  test_toolexecutor_http.py  test_transition_literals.py  test_transition_operators.py
(+22 files in other folders)
